backend/api/tests/integration/snapshots/integration__course__clone-2.snap
---
source: tests/integration/course.rs
expression: body
---
{
  "id": "[id]",
  "publishedAt": null,
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "courseData": {
    "draftOrLive": "draft",
    "displayName": "course name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "duration": null,
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "[id]",
      "kind": "Cover",
      "is_complete": true
    },
    "categories": [],
    "additionalResources": "[ids]",
    "units": [
      {
        "id": "[id]",
        "displayName": "course1 unit 1",
        "description": "Image",
        "imageId": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f"
      },
      {
        "id": "[id]",
        "displayName": "course1 unit 2",
        "description": "Audio",
        "audioId": "0d2c9c30-3850-11ed-ac6a-9b037f9e2276"
      },
      {
        "id": "[id]",
        "displayName": "course1 unit 3",
        "description": "URL",
        "link": "https://jigzi.org/"
      }
    ]
  },
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
