backend/api/tests/integration/snapshots/integration__course__publish_modules-1.snap
---
source: tests/integration/course.rs
expression: body
---
{
  "id": "3a6a3660-f3ec-11ec-b8ef-071747fa2a0d",
  "publishedAt": "2022-06-24T18:35:33.636556Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "courseData": {
    "draftOrLive": "draft",
    "displayName": "course name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "ce6e6eb0-0ea6-11ed-9785-2712225b9473",
      "kind": "Cover",
      "is_complete": true
    },
    "ageRanges": [],
    "affiliations": [],
    "categories": [],
    "additionalResources": [],
    "items": [
      "0cc084bc-7c83-11eb-9f77-e3218dffb008",
      "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
    ]
  }
}
